--- a/articles.html
+++ b/articles.html
@@ -1428,7 +1428,7 @@
                                     <div class="_ati8ih">
                                      <span class="_14y1gc">
                                       <div class="_1jo4hgw" aria-hidden="true"><span class="_tyxjp1">₱1,101</span><span class="_r1nvod">&nbsp;night</span></div>
-                                      <span class="a8jt5op dir dir-ltr">₱1,101 per night</span>
+                                      <span class="visually-hidden dir dir-ltr">₱1,101 per night</span>
                                      </span>
                                     </div>
                                    </div>
@@ -1633,7 +1633,7 @@
                                     <div class="_ati8ih">
                                      <span class="_14y1gc">
                                       <div class="_1jo4hgw" aria-hidden="true"><span class="_tyxjp1">₱13,643</span><span class="_r1nvod">&nbsp;night</span></div>
-                                      <span class="a8jt5op dir dir-ltr">₱13,643 per night</span>
+                                      <span class="visually-hidden dir dir-ltr">₱13,643 per night</span>
                                      </span>
                                     </div>
                                    </div>
@@ -1834,7 +1834,7 @@
                                     <div class="_ati8ih">
                                      <span class="_14y1gc">
                                       <div class="_1jo4hgw" aria-hidden="true"><span class="_tyxjp1">₱2,880</span><span class="_r1nvod">&nbsp;night</span></div>
-                                      <span class="a8jt5op dir dir-ltr">₱2,880 per night</span>
+                                      <span class="visually-hidden dir dir-ltr">₱2,880 per night</span>
                                      </span>
                                     </div>
                                    </div>
@@ -2042,7 +2042,7 @@
                                     <div class="_ati8ih">
                                      <span class="_14y1gc">
                                       <div class="_1jo4hgw" aria-hidden="true"><span class="_tyxjp1">₱1,528</span><span class="_r1nvod">&nbsp;night</span></div>
-                                      <span class="a8jt5op dir dir-ltr">₱1,528 per night</span>
+                                      <span class="visually-hidden dir dir-ltr">₱1,528 per night</span>
                                      </span>
                                     </div>
                                    </div>
@@ -2225,7 +2225,7 @@
                                     <div class="_ati8ih">
                                      <span class="_14y1gc">
                                       <div class="_1jo4hgw" aria-hidden="true"><span class="_tyxjp1">₱2,762</span><span class="_r1nvod">&nbsp;night</span></div>
-                                      <span class="a8jt5op dir dir-ltr">₱2,762 per night</span>
+                                      <span class="visually-hidden dir dir-ltr">₱2,762 per night</span>
                                      </span>
                                     </div>
                                    </div>
@@ -2408,7 +2408,7 @@
                                     <div class="_ati8ih">
                                      <span class="_14y1gc">
                                       <div class="_1jo4hgw" aria-hidden="true"><span class="_tyxjp1">₱869</span><span class="_r1nvod">&nbsp;night</span></div>
-                                      <span class="a8jt5op dir dir-ltr">₱869 per night</span>
+                                      <span class="visually-hidden dir dir-ltr">₱869 per night</span>
                                      </span>
                                     </div>
                                    </div>
@@ -2591,7 +2591,7 @@
                                     <div class="_ati8ih">
                                      <span class="_14y1gc">
                                       <div class="_1jo4hgw" aria-hidden="true"><span class="_tyxjp1">₱869</span><span class="_r1nvod">&nbsp;night</span></div>
-                                      <span class="a8jt5op dir dir-ltr">₱869 per night</span>
+                                      <span class="visually-hidden dir dir-ltr">₱869 per night</span>
                                      </span>
                                     </div>
                                    </div>
@@ -2778,7 +2778,7 @@
                                     <div class="_ati8ih">
                                      <span class="_14y1gc">
                                       <div class="_1jo4hgw" aria-hidden="true"><span class="_tyxjp1">₱2,332</span><span class="_r1nvod">&nbsp;night</span></div>
-                                      <span class="a8jt5op dir dir-ltr">₱2,332 per night</span>
+                                      <span class="visually-hidden dir dir-ltr">₱2,332 per night</span>
                                      </span>
                                     </div>
                                    </div>
@@ -2965,7 +2965,7 @@
                                     <div class="_ati8ih">
                                      <span class="_14y1gc">
                                       <div class="_1jo4hgw" aria-hidden="true"><span class="_tyxjp1">₱869</span><span class="_r1nvod">&nbsp;night</span></div>
-                                      <span class="a8jt5op dir dir-ltr">₱869 per night</span>
+                                      <span class="visually-hidden dir dir-ltr">₱869 per night</span>
                                      </span>
                                     </div>
                                    </div>
@@ -3148,7 +3148,7 @@
                                     <div class="_ati8ih">
                                      <span class="_14y1gc">
                                       <div class="_1jo4hgw" aria-hidden="true"><span class="_tyxjp1">₱869</span><span class="_r1nvod">&nbsp;night</span></div>
-                                      <span class="a8jt5op dir dir-ltr">₱869 per night</span>
+                                      <span class="visually-hidden dir dir-ltr">₱869 per night</span>
                                      </span>
                                     </div>
                                    </div>
@@ -3331,7 +3331,7 @@
                                     <div class="_ati8ih">
                                      <span class="_14y1gc">
                                       <div class="_1jo4hgw" aria-hidden="true"><span class="_tyxjp1">₱869</span><span class="_r1nvod">&nbsp;night</span></div>
-                                      <span class="a8jt5op dir dir-ltr">₱869 per night</span>
+                                      <span class="visually-hidden dir dir-ltr">₱869 per night</span>
                                      </span>
                                     </div>
                                    </div>
@@ -3514,7 +3514,7 @@
                                     <div class="_ati8ih">
                                      <span class="_14y1gc">
                                       <div class="_1jo4hgw" aria-hidden="true"><span class="_tyxjp1">₱869</span><span class="_r1nvod">&nbsp;night</span></div>
-                                      <span class="a8jt5op dir dir-ltr">₱869 per night</span>
+                                      <span class="visually-hidden dir dir-ltr">₱869 per night</span>
                                      </span>
                                     </div>
                                    </div>
