--- a/help/host-liability-insurance.html
+++ b/help/host-liability-insurance.html
@@ -61,13 +61,13 @@
                       <div class="sua7ayi dir dir-ltr">
                         <div>
                           <div
-                            class="a1vub294 dir dir-ltr"
+                            class="visually-hidden dir dir-ltr"
                             role="status"
                             aria-atomic="true"
                             aria-live="polite"
                           ></div>
                           <div
-                            class="a1vub294 dir dir-ltr"
+                            class="visually-hidden dir dir-ltr"
                             role="status"
                             aria-atomic="true"
                             aria-live="polite"
@@ -124,7 +124,7 @@
                                         d="m13 24c6.0751322 0 11-4.9248678 11-11 0-6.07513225-4.9248678-11-11-11-6.07513225 0-11 4.92486775-11 11 0 6.0751322 4.92486775 11 11 11zm8-3 9 9"
                                       ></path>
                                     </g></svg
-                                  ><span class="s1i49yfd dir dir-ltr"
+                                  ><span class="visually-hidden dir dir-ltr"
                                     >Search</span
                                   ></span
                                 ></span
@@ -132,7 +132,7 @@
                             </button>
                           </form>
                           <div
-                            class="a1vub294 dir dir-ltr"
+                            class="visually-hidden dir dir-ltr"
                             id="search-suggestions-instructions"
                           >
                             Suggestions will show after typing in the search
@@ -299,7 +299,7 @@
                             <div class="tg0jqgn dir dir-ltr">
                               <a href="/help/topic/1382/about-airbnb" class="text-link">
                                 <div class="tg0jqgn dir dir-ltr">About Airbnb
-                                  <span class="a8jt5op dir dir-ltr"> – help
+                                  <span class="visually-hidden dir dir-ltr"> – help
                                     topic
                                   </span>
                                 </div>
@@ -311,7 +311,7 @@
                             <div class="tg0jqgn dir dir-ltr">
                               <a href="/help/topic/1380/our-community-policies" class="text-link">
                                 <div class="tg0jqgn dir dir-ltr">Our community policies
-                                  <span class="a8jt5op dir dir-ltr"> – help topic</span>
+                                  <span class="visually-hidden dir dir-ltr"> – help topic</span>
                                 </div>
                               </a>
                             </div>
@@ -321,7 +321,7 @@
                             <div class="tg0jqgn dir dir-ltr">
                               <a href="/help/topic/1630/hosting-stays" class="text-link">
                                 <div class="tg0jqgn dir dir-ltr">Hosting stays
-                                  <span class="a8jt5op dir dir-ltr"> – help topic</span>
+                                  <span class="visually-hidden dir dir-ltr"> – help topic</span>
                                 </div>
                               </a>
                             </div>
@@ -330,7 +330,7 @@
                           <li class="l79qg7k dir dir-ltr">
                             <div class="tg0jqgn dir dir-ltr">
                               <span class="c15y1379 dir dir-ltr">Host liability insurance
-                                <span class="a8jt5op dir dir-ltr"> – help article</span>
+                                <span class="visually-hidden dir dir-ltr"> – help article</span>
                               </span>
                             </div>
                           </li>
