--- a/help/searching-for-stays.html
+++ b/help/searching-for-stays.html
@@ -62,13 +62,13 @@
                       <div class="sua7ayi dir dir-ltr">
                         <div>
                           <div
-                            class="a1vub294 dir dir-ltr"
+                            class="visually-hidden dir dir-ltr"
                             role="status"
                             aria-atomic="true"
                             aria-live="polite"
                           ></div>
                           <div
-                            class="a1vub294 dir dir-ltr"
+                            class="visually-hidden dir dir-ltr"
                             role="status"
                             aria-atomic="true"
                             aria-live="polite"
@@ -125,7 +125,7 @@
                                         d="m13 24c6.0751322 0 11-4.9248678 11-11 0-6.07513225-4.9248678-11-11-11-6.07513225 0-11 4.92486775-11 11 0 6.0751322 4.92486775 11 11 11zm8-3 9 9"
                                       ></path>
                                     </g></svg
-                                  ><span class="s1i49yfd dir dir-ltr"
+                                  ><span class="visually-hidden dir dir-ltr"
                                     >Search</span
                                   ></span
                                 ></span
@@ -133,7 +133,7 @@
                             </button>
                           </form>
                           <div
-                            class="a1vub294 dir dir-ltr"
+                            class="visually-hidden dir dir-ltr"
                             id="search-suggestions-instructions"
                           >
                             Suggestions will show after typing in the search
@@ -334,7 +334,7 @@
                                           ></path>
                                         </g></svg></span
                                     >How to search<span
-                                      class="a8jt5op dir dir-ltr"
+                                      class="visually-hidden dir dir-ltr"
                                     >
                                       – help topic</span
                                     >
@@ -376,7 +376,7 @@
                                 class="text-link"
                                 ><div class="tg0jqgn dir dir-ltr">
                                   Searching and booking<span
-                                    class="a8jt5op dir dir-ltr"
+                                    class="visually-hidden dir dir-ltr"
                                   >
                                     – help topic</span
                                   >
@@ -391,7 +391,7 @@
                                 href="/help/topic/1337/search-tips"
                                 class="text-link"
                                 ><div class="tg0jqgn dir dir-ltr">
-                                  Search tips<span class="a8jt5op dir dir-ltr">
+                                  Search tips<span class="visually-hidden dir dir-ltr">
                                     – help topic</span
                                   >
                                 </div></a
@@ -406,7 +406,7 @@
                                 class="text-link"
                                 ><div class="tg0jqgn dir dir-ltr">
                                   How to search<span
-                                    class="a8jt5op dir dir-ltr"
+                                    class="visually-hidden dir dir-ltr"
                                   >
                                     – help topic</span
                                   >
@@ -419,7 +419,7 @@
                             <div class="tg0jqgn dir dir-ltr">
                               <span class="c15y1379 dir dir-ltr"
                                 >Searching for stays<span
-                                  class="a8jt5op dir dir-ltr"
+                                  class="visually-hidden dir dir-ltr"
                                 >
                                   – help article</span
                                 ></span
