--- a/listings-product/products-mobile.html
+++ b/listings-product/products-mobile.html
@@ -16074,7 +16074,7 @@
                                                     class="_gw4xx4"
                                                   >
                                                     <span
-                                                      class="a8jt5op dir dir-ltr"
+                                                      class="visually-hidden dir dir-ltr"
                                                       >Unavailable: Security
                                                       cameras on property</span
                                                     ><del aria-hidden="true"
@@ -16121,7 +16121,7 @@
                                                     class="_gw4xx4"
                                                   >
                                                     <span
-                                                      class="a8jt5op dir dir-ltr"
+                                                      class="visually-hidden dir dir-ltr"
                                                       >Unavailable: Washer</span
                                                     ><del aria-hidden="true"
                                                       >Washer</del
@@ -16166,7 +16166,7 @@
                                                     class="_gw4xx4"
                                                   >
                                                     <span
-                                                      class="a8jt5op dir dir-ltr"
+                                                      class="visually-hidden dir dir-ltr"
                                                       >Unavailable:
                                                       Heating</span
                                                     ><del aria-hidden="true"
