--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -5853,7 +5853,7 @@
                                                                   >
                                                                 </div>
                                                                 <span
-                                                                  class="a8jt5op dir dir-ltr"
+                                                                  class="visually-hidden dir dir-ltr"
                                                                   >₱49,950 per
                                                                   night</span
                                                                 >
@@ -23848,7 +23848,7 @@
                                                 </div>
                                                 <div class="_gfomxi">
                                                   <div id="security_camera_9999_16354372-row-title" class="_gw4xx4">
-                                                    <span class="a8jt5op dir dir-ltr">Unavailable: Security
+                                                    <span class="visually-hidden dir dir-ltr">Unavailable: Security
                                                       cameras on property</span><del aria-hidden="true">Security cameras on
                                                       property</del>
                                                   </div>
@@ -23878,7 +23878,7 @@
                                                 </div>
                                                 <div class="_gfomxi">
                                                   <div id="pdp_unavailable_33_16354372-0-row-title" class="_gw4xx4">
-                                                    <span class="a8jt5op dir dir-ltr">Unavailable: Washer</span><del
+                                                    <span class="visually-hidden dir dir-ltr">Unavailable: Washer</span><del
                                                       aria-hidden="true">Washer</del>
                                                   </div>
                                                 </div>
@@ -23907,7 +23907,7 @@
                                                 </div>
                                                 <div class="_gfomxi">
                                                   <div id="pdp_unavailable_30_16354372-0-row-title" class="_gw4xx4">
-                                                    <span class="a8jt5op dir dir-ltr">Unavailable:
+                                                    <span class="visually-hidden dir dir-ltr">Unavailable:
                                                       Heating</span><del aria-hidden="true">Heating</del>
                                                   </div>
                                                 </div>
@@ -29019,7 +29019,7 @@
                                             <span
                                               ><span class="_154iz1b2"
                                                 ><span
-                                                  class="a8jt5op dir dir-ltr"
+                                                  class="visually-hidden dir dir-ltr"
                                                   >Rating 4.97 out of 5; 136
                                                   reviews</span
                                                 ><span class="_1lzlk52"
@@ -31892,7 +31892,7 @@
                                           id="security_camera_9999_16354372-row-title"
                                           class="_gw4xx4"
                                         >
-                                          <span class="a8jt5op dir dir-ltr"
+                                          <span class="visually-hidden dir dir-ltr"
                                             >Unavailable: Security cameras on
                                             property</span
                                           ><del aria-hidden="true"
@@ -31937,7 +31937,7 @@
                                           id="pdp_unavailable_33_16354372-0-row-title"
                                           class="_gw4xx4"
                                         >
-                                          <span class="a8jt5op dir dir-ltr"
+                                          <span class="visually-hidden dir dir-ltr"
                                             >Unavailable: Washer</span
                                           ><del aria-hidden="true">Washer</del>
                                         </div>
@@ -31979,7 +31979,7 @@
                                           id="pdp_unavailable_30_16354372-0-row-title"
                                           class="_gw4xx4"
                                         >
-                                          <span class="a8jt5op dir dir-ltr"
+                                          <span class="visually-hidden dir dir-ltr"
                                             >Unavailable: Heating</span
                                           ><del aria-hidden="true">Heating</del>
                                         </div>
