--- a/loaders/messages-loader.html
+++ b/loaders/messages-loader.html
@@ -323,7 +323,7 @@
                                       <section>
                                         <h2 id="thread_header" tabindex="-1" class="heading-reset"
                                           elementtiming="LCP-target"><span aria-hidden="true">Airbnb Support</span><span
-                                            class="a8jt5op dir dir-ltr">Conversation with Airbnb
+                                            class="visually-hidden dir dir-ltr">Conversation with Airbnb
                                             Support</span></h2>
                                       </section>
                                     </div>
@@ -707,7 +707,7 @@
                                                           <div>
                                                             <div class="_1f4kzn0">
                                                               <div class="_1fvwakm0"><span
-                                                                  class="a8jt5op dir dir-ltr">Message from Airbnb
+                                                                  class="visually-hidden dir dir-ltr">Message from Airbnb
                                                                   Service</span><svg viewBox="0 0 16 16"
                                                                   xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                                                   role="presentation" focusable="false"
@@ -739,7 +739,7 @@
                                     <div class="_1eaes69">
                                       <div class="o1f1deyb dir dir-ltr"><button
                                           id="messaging_c3pi_composebar_skip_to_inbox_link" type="button"
-                                          class="_1ete8eke">Return to Inbox</button><span class="a8jt5op dir dir-ltr"
+                                          class="_1ete8eke">Return to Inbox</button><span class="visually-hidden dir dir-ltr"
                                           id="message_input">Typing
                                           messages in this thread is not currently allowed. This may be because there is
                                           a message above that
@@ -779,7 +779,7 @@
                                       <section>
                                         <h2 id="thread_header" tabindex="-1" class="heading-reset"
                                           elementtiming="LCP-target"><span aria-hidden="true">Myrna</span><span
-                                            class="a8jt5op dir dir-ltr">Conversation with Myrna</span></h2>
+                                            class="visually-hidden dir dir-ltr">Conversation with Myrna</span></h2>
                                       </section>
                                     </div>
                                     <div class="_1ab1ddqs">Response time: 2 hours</div>
@@ -821,7 +821,7 @@
                                                           <div>
                                                             <div class="_1f4kzn0">
                                                               <div class="_1fvwakm0"><span
-                                                                  class="a8jt5op dir dir-ltr">Message from Airbnb
+                                                                  class="visually-hidden dir dir-ltr">Message from Airbnb
                                                                   Service</span><svg viewBox="0 0 16 16"
                                                                   xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                                                   role="presentation" focusable="false"
@@ -1059,7 +1059,7 @@
                                       <section>
                                         <h2 id="thread_header" tabindex="-1" class="heading-reset"
                                           elementtiming="LCP-target"><span aria-hidden="true">Conversation with
-                                            Kuniatsu</span><span class="a8jt5op dir dir-ltr">Conversation
+                                            Kuniatsu</span><span class="visually-hidden dir dir-ltr">Conversation
                                             with Kuniatsu and Dorette</span></h2>
                                       </section>
                                     </div>
@@ -1299,7 +1299,7 @@
                                       <section>
                                         <h2 id="thread_header" tabindex="-1" class="heading-reset"
                                           elementtiming="LCP-target"><span aria-hidden="true">Adrian</span><span
-                                            class="a8jt5op dir dir-ltr">Conversation with Adrian</span></h2>
+                                            class="visually-hidden dir dir-ltr">Conversation with Adrian</span></h2>
                                       </section>
                                     </div>
                                     <div class="_1ab1ddqs">Response time: 1 hour</div>
@@ -1378,7 +1378,7 @@
                                                           <div>
                                                             <div class="_1f4kzn0">
                                                               <div class="_1fvwakm0"><span
-                                                                  class="a8jt5op dir dir-ltr">Message from Airbnb
+                                                                  class="visually-hidden dir dir-ltr">Message from Airbnb
                                                                   Service</span><svg viewBox="0 0 16 16"
                                                                   xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                                                   role="presentation" focusable="false"
@@ -1482,7 +1482,7 @@
                                                           <div>
                                                             <div class="_1f4kzn0">
                                                               <div class="_1fvwakm0"><span
-                                                                  class="a8jt5op dir dir-ltr">Message from Airbnb
+                                                                  class="visually-hidden dir dir-ltr">Message from Airbnb
                                                                   Service</span><svg viewBox="0 0 16 16"
                                                                   xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                                                   role="presentation" focusable="false"
@@ -1581,7 +1581,7 @@
                                                         style="margin: 16px 34px 10px 22px;">
                                                         <div class="_1f4kzn0">
                                                           <div class="_1fvwakm0"><span
-                                                              class="a8jt5op dir dir-ltr">Message from Airbnb
+                                                              class="visually-hidden dir dir-ltr">Message from Airbnb
                                                               Service</span><svg viewBox="0 0 16 16"
                                                               xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                                               role="presentation" focusable="false"
