--- a/resource-center/article.html
+++ b/resource-center/article.html
@@ -77,7 +77,7 @@
                               >
                                 <span class="_1yy2pf1">
                                   Resource Center
-                                  <span class="a8jt5op dir dir-ltr">
+                                  <span class="visually-hidden dir dir-ltr">
                                     home page
                                   </span>
                                 </span>
