--- a/resource-center/topic.html
+++ b/resource-center/topic.html
@@ -78,7 +78,7 @@
                               >
                                 <span class="_1yy2pf1">
                                   Resource Center
-                                  <span class="a8jt5op dir dir-ltr">
+                                  <span class="visually-hidden dir dir-ltr">
                                     home page
                                   </span>
                                 </span>
@@ -979,7 +979,7 @@
                                                 <div data-showat="mediumAndAbove">
                                                     <div style="margin-bottom:32px">
                                                         <div>
-                                                            <div class="_1plo99a">10 articles</div><span class="a8jt5op dir dir-ltr">,
+                                                            <div class="_1plo99a">10 articles</div><span class="visually-hidden dir dir-ltr">,
                                                             </span><span aria-hidden="true"> · </span>
                                                             <div class="_1plo99a">2 videos</div>
                                                         </div>
@@ -999,7 +999,7 @@
                                                     aria-labelledby="resourceCenter.topic.filterChipGroup-DLS-chipGroup-label">
                                                     <div class=" dir dir-ltr"
                                                         id="resourceCenter.topic.filterChipGroup-DLS-chipGroup-label"><span
-                                                            class="a8jt5op dir dir-ltr">Content type filters</span></div><button
+                                                            class="visually-hidden dir dir-ltr">Content type filters</span></div><button
                                                         class="_np90lm" aria-expanded="false" type="button" id="content-type-btn">Content type<span
                                                             aria-hidden="true" class="_1vwho579">Content type</span></button>
                                                 </div>
