--- a/help/feedback.html
+++ b/help/feedback.html
@@ -61,13 +61,13 @@
                       <div class="sua7ayi dir dir-ltr">
                         <div>
                           <div
-                            class="a1vub294 dir dir-ltr"
+                            class="visually-hidden dir dir-ltr"
                             role="status"
                             aria-atomic="true"
                             aria-live="polite"
                           ></div>
                           <div
-                            class="a1vub294 dir dir-ltr"
+                            class="visually-hidden dir dir-ltr"
                             role="status"
                             aria-atomic="true"
                             aria-live="polite"
@@ -124,7 +124,7 @@
                                         d="m13 24c6.0751322 0 11-4.9248678 11-11 0-6.07513225-4.9248678-11-11-11-6.07513225 0-11 4.92486775-11 11 0 6.0751322 4.92486775 11 11 11zm8-3 9 9"
                                       ></path>
                                     </g></svg
-                                  ><span class="s1i49yfd dir dir-ltr"
+                                  ><span class="visually-hidden dir dir-ltr"
                                     >Search</span
                                   ></span
                                 ></span
@@ -132,7 +132,7 @@
                             </button>
                           </form>
                           <div
-                            class="a1vub294 dir dir-ltr"
+                            class="visually-hidden dir dir-ltr"
                             id="search-suggestions-instructions"
                           >
                             Suggestions will show after typing in the search
