--- a/help/help.html
+++ b/help/help.html
@@ -261,13 +261,13 @@
                             <div class="hidden block-md">
                               <div>
                                 <div
-                                  class="a1vub294 dir dir-ltr"
+                                  class="visually-hidden dir dir-ltr"
                                   role="status"
                                   aria-atomic="true"
                                   aria-live="polite"
                                 ></div>
                                 <div
-                                  class="a1vub294 dir dir-ltr"
+                                  class="visually-hidden dir dir-ltr"
                                   role="status"
                                   aria-atomic="true"
                                   aria-live="polite"
@@ -455,7 +455,7 @@
                                   </ul>
                                 </div>
                                 <div
-                                  class="a1vub294 dir dir-ltr"
+                                  class="visually-hidden dir dir-ltr"
                                   id="search-suggestions-instructions"
                                 >
                                   Suggestions will show after typing in the
@@ -6346,9 +6346,9 @@
                     </svg></span></button></span>
               <div class="s5vb0u3 dir dir-ltr">
                 <div>
-                  <div class="a1vub294 dir dir-ltr" role="status" aria-atomic="true" aria-live="polite">3 search
+                  <div class="visually-hidden dir dir-ltr" role="status" aria-atomic="true" aria-live="polite">3 search
                     suggestions</div>
-                  <div class="a1vub294 dir dir-ltr" role="status" aria-atomic="true" aria-live="polite"></div>
+                  <div class="visually-hidden dir dir-ltr" role="status" aria-atomic="true" aria-live="polite"></div>
                   <form class="ctqyxkl c1tt8vn6 dir dir-ltr" role="search"><input data-search-mobile=""
                       data-search="#search-suggestions-popup-mobile"
                       data-search-loader="#search-suggestions-popup-mobile-loader"
@@ -6479,7 +6479,7 @@
                       </li>
                     </ul>
                   </div>
-                  <div class="a1vub294 dir dir-ltr" id="search-suggestions-instructions">Suggestions will show after
+                  <div class="visually-hidden dir dir-ltr" id="search-suggestions-instructions">Suggestions will show after
                     typing in the search input. Use the up and down arrows to review. Use enter to select. If the
                     selection is a phrase, that phrase will be submitted to search. If the suggestion is a link, the
                     browser will navigate to that page.</div>
