--- a/landing-pages/merchandising.html
+++ b/landing-pages/merchandising.html
@@ -1189,7 +1189,7 @@
                                                                 </div>
                                                               </div>
                                                               <span
-                                                                class="header__search-overlay dir dir-ltr"
+                                                                class="visually-hidden dir dir-ltr"
                                                                 aria-atomic="true"
                                                                 aria-live="polite"
                                                                 role="status"
@@ -11522,7 +11522,7 @@
                                                                 </div>
                                                               </div>
                                                               <span
-                                                                class="header__search-overlay dir dir-ltr"
+                                                                class="visually-hidden dir dir-ltr"
                                                                 aria-atomic="true"
                                                                 aria-live="polite"
                                                                 role="status"
